--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -213,7 +213,7 @@
             <div id="runHost" onclick="openScreen('#hostSettings');">
                 Host
             </div>
-            <div id="customize" onclick="" style="color:white">
+            <div id="customize" onclick="" style="color:#777;cursor: default;">
                 Customize
             </div>
             <div id="runHost" onclick="openScreen('#settings');">
