--- a/server/http/index.html
+++ b/server/http/index.html
@@ -62,6 +62,7 @@
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-56840301-1', 'auto');
+        ga('require', 'displayfeatures');
         ga('send', 'pageview');
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
