--- a/server/http/index.html
+++ b/server/http/index.html
@@ -41,6 +41,7 @@
                 <li>Sign Up</li>-->
                 <li>Downloadable Client</li>
             </ul>
+            <div style="font-size:.5em; text-align:center;">Launching Decemeber 1st, 2014</div>
         </nav>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
     </header>
