--- a/server/http/index.html
+++ b/server/http/index.html
@@ -41,9 +41,10 @@
                 <li>Sign Up</li>-->
                 <li>Downloadable Client</li>
             </ul>
-            <div style="font-size:.5em; text-align:center;">Launching Decemeber 1st, 2014</div>
+            
         </nav>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:1.5em; color:white; text-align:center;"><br />Launching Decemeber 1st, 2014</div>
     </header>
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
