--- a/server/http/index.html
+++ b/server/http/index.html
@@ -29,24 +29,32 @@
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
         <ul class="featurelist" style="font-size:small">
-            <li><a href="news.html">News</a></li>
-            <li><a href="forum.html">Forum</a></li>
-            <li><a href="chat.html">Chat</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="news.html">News</a>
+            </li>
+            <li><a href="forum.html">Forum</a>
+            </li>
+            <li><a href="chat.html">Chat</a>
+            </li>
+            <li><a href="faq.html">FAQ</a>
+            </li>
         </ul>
         <nav class="lander-main">
-            <div class="downloadbutton" style="display:none">Play Now</div>
+            <a href="ygopro-win-installer.msi">
+                <div class="downloadbutton" style="display:none">Play Now</div>
+            </a>
             <ul class="webonly" style="text-align:center; padding:0;">
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
                 <li>Downloadable Client</li>
             </ul>
-            
+
         </nav>
 
         <div style="font-size:.5em; text-align:center; color:purple" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
-        <div style="font-size:1.5em; text-align:center; color:pink"><br />Launching December 1st, 2014</div>
-        <div style="font-size:.8em; text-align:center; color:pink"><br />Beta Now Open</div>
+        <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'>
+            <br />Now Live!</div>
+        <div style="font-size:.8em; text-align:center; color:pink">
+            <br />Beta Now Open</div>
 
     </header>
     <footer class="superfooter">
