--- a/server/http/index.html
+++ b/server/http/index.html
@@ -39,13 +39,13 @@
             </li>
         </ul>
         <nav class="lander-main">
-            <a href="ygopro-win-installer.msi">
+            
                 <div class="downloadbutton" style="display:none">Play Now</div>
-            </a>
+           
             <ul class="webonly" style="text-align:center; padding:0;">
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                <li>Downloadable Client</li>
+                <li><a href="ygopro-win-installer.msi">Downloadable Client </a></li>
             </ul>
 
         </nav>
