--- a/server/http/index.html
+++ b/server/http/index.html
@@ -45,7 +45,8 @@
             <ul class="webonly" style="text-align:center; padding:0;">
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                <li><a href="ygopro-win-installer.msi">Downloadable Client </a></li>
+                <li><a href="ygopro-win-installer.msi">Full Windows Client </a></li>
+                <li><a href="web-win-install.zip">Portable Web Self Installer </a></li>
             </ul>
 
         </nav>
