--- a/server/http/index.html
+++ b/server/http/index.html
@@ -46,7 +46,7 @@
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
                 <li><a href="ygopro-win-installer.msi">Full Windows Client </a></li>
-                <li><a href="web-win-install.zip">Portable Web Self Installer </a></li>
+                <li><a href="web-win-install.zip">Portable Web Windows Mini Installer </a></li>
             </ul>
 
         </nav>
