--- a/server/http/faq.html
+++ b/server/http/faq.html
@@ -34,7 +34,8 @@
             <li><a href="faq.html">FAQ</a></li>
         </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
-        <p></p>
+        <p>Q: How Can I install the web installer<br />
+        A: copy the contence of the file to a workable location like %appdata% when started it will create a ygopro folder. Then copy your DevPro or YGOPro scripts pics and decks to the folder.</p>
     </header>
     
     <footer class="superfooter">
