--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -189,8 +189,8 @@
                     <select>
                         <option value="default">Default</option>
                     </select>
-                    <button onclick="saveSettings();closeAllScreens()">Save</button>
-                    <button onclick="applySettings();closeAllScreens()">Cancel</button>
+                    <button onclick="saveSettings();closeAllScreens()" style="color:black">Save</button>
+                    <button onclick="applySettings();closeAllScreens()" style="color:black">Cancel</button>
                     <br />
                 </div>
         </section>
