--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -143,7 +143,7 @@
                         </div>
                 </section>
                 <div id='servermessages'>
-                    <meter value=0 min=0 max=2200 value=0 id="progressmeter"></meter>
+                    Currently in Offline Mode.
                 </div>
 
                 <div id="staticcontrols">
@@ -176,13 +176,13 @@
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-56840301-1', 'auto');
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
     </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
         $(function () {
             if (window.self != window.top) {
