--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -18,7 +18,7 @@
     </script>
     <div id="control">
         <div onclick="gui.App.quit();"></div>
-        <div onclick="win.maximize();"></div>
+        <!--<div onclick="win.maximize();"></div>-->
         <div onclick="win.minimize();"></div>
     </div>
     <main style='height: 100%;'>
