update installer location

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -45,8 +45,7 @@
             <ul class="webonly" style="text-align:center; padding:0;">
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                <li><a href="http://salvationdevelopment.com/ygopro-win-installer.msi">Full Windows Client </a></li>
-                <li><a href="http://salvationdevelopment.com/web-win-install.zip">Portable Web Windows Mini Installer </a></li>
+                <li><a href="http://salvationdevelopment.com/setup.msi">Full Windows Client </a></li>
             </ul>
 
         </nav>
