--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -54,16 +54,25 @@
                 <br />
                 <label>Ban List</label>
                 <select id="creategamebanlist">
-                    <option value="0" selected>2013.9.1(TCG)</option>
-                    <option value="1">2013.9.1(OCG)</option>
-                    <option value="2">2013.3.1</option>
-                    <option value="3">2012.9.1</option>
-                    <option value="4">2012.3.1</option>
-                    <option value="5">2011.9.1</option>
-                    <option value="6">Traditional</option>
-                    <option value="7">Unlimited</option>
-                    <option value="8">Mega-Banned</option>
-                    <option value="9">TBC</option>
+                    <option value="0" selected>2014.10.1(TCG)</option>
+                    <option value="1" selected>2014.10.1(OCG)</option>
+                    <option value="2" selected>2014.7.1(OCG)</option>
+                    <option value="3" selected>2014.4.1(TCG)</option>
+                    <option value="4" selected>2014.4.1(OCG)</option>
+                    <option value="5" selected>2014.1.1(TCG)</option>
+                    <option value="6" selected>2014.2.1(OCG)</option>
+                    <option value="7" selected>2013.9.1(TCG)</option>
+                    <option value="8" selected>2013.9.1(OCG)</option>
+                    <option value="9" selected>2013.3.1</option>
+                    <option value="10" selected>2012.9.1</option>
+                    <option value="11" selected>2012.3.1</option>
+                    <option value="12" selected>2011.9.1</option>
+                    <option value="13" selected>Traditional</option>
+                    <option value="14" selected>Unlimited</option>
+                    <option value="15" selected>Mega-Banned</option>
+                    <option value="16" selected>TBC</option>
+                    <option value="17">N/A</option>
+                    
                 </select>
                 <br />
                 <label>Card Pool</label>
