--- a/server/http/index.html
+++ b/server/http/index.html
@@ -23,21 +23,18 @@
 
 <body>
 
-    <header>
-        <h1>
-<!--            <img src="img/logo.png" alt="" id="logo" />-->
-            <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
-        <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
+<header style="padding-top:10px;">
+       <a href="index.html"> <div style="font-size:1.2em"><br /></div>
         <ul class="featurelist" style="font-size:small">
-            <li><a href="news.html">News</a>
-            </li>
-            <li><a href="forum.html">Forum</a>
-            </li>
-            <li><a href="chat.html">Chat</a>
-            </li>
-            <li><a href="faq.html">FAQ</a>
-            </li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="forum.html">Forum</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
+    <a href="index.html"> <h1 style="padding-top:140px;">
+<!--            <img src="img/logo.png" alt="" id="logo" />-->
+            <span style="color:#e4a;">YGOPro</span> Salvation Server</h1></a>
+           <h2>Online Yu-Gi-Oh! Simulator</h2>
         <nav class="lander-main">
             
                 <div class="downloadbutton" style="display:none">Play Now</div>
@@ -46,20 +43,17 @@
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
                 <li><a href="http://d-h.st/5PC6">Full Windows Client </a></li>
-                <li><a href="http://salvationdevelopment.com/setup.msi"> Mirror 1 [Salvation Development]</a></li>
-                <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 1 [GOOGLE]</a></li>
-                <li><a href="http://d-h.st/5PC6">Mirror 2 [D-h] </a></li>
-                <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 3 [Mediafire] </a></li>
+                <li><a href="http://salvationdevelopment.com/setup.msi"> Mirror 1</a></li>
+                <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
+                <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
+                <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>
                 
             </ul>
 
         </nav>
 
-        <div style="font-size:.5em; text-align:center; color:purple" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
         <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'>
-            <br />Now Live!</div>
-
-
     </header>
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
