--- a/server/http/chat.html
+++ b/server/http/chat.html
@@ -40,7 +40,7 @@
  </div>
  
  <script type="text/javascript">
-	swfobject.embedSWF("lightIRC/lightIRC.swf", "lightIRC", "100%", "92%", "10.0.0", "expressInstall.swf", params);
+	swfobject.embedSWF("lightIRC.swf", "lightIRC", "100%", "92%", "10.0.0", "expressInstall.swf", params, {wmode:"transparent"});;
  </script>
     </header>
     
