--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -199,6 +199,7 @@
                     <button onclick="saveSettings();closeAllScreens()" style="color:black">Save</button>
                     <button onclick="applySettings();closeAllScreens()" style="color:black">Cancel</button>
                     <button onclick="locallogin(true);closeAllScreens()" style="color:black">Change Username</button>
+                    <button onclick="createmanifest();closeAllScreens()" style="color:black">Update Launcher</button>
                     <br />
                 </div>
         </section>
