--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -134,17 +134,19 @@
                         <select></select>
                     </label>
                     <label>Round Type
-                        <select value='0' selected>Single</select>
-                        <select value='1'>Match</select>
-                        <select value='2'>Tag</select>
+                        <select id="roundtype">
+                            <option value='0'>Single</option>
+                            <option value='1'>Match</option>
+                            <option value='2'>Tag</option>
+                        </select>
                     </label>
                     <label>Banlist
                         <select></select>
                     </label>
                     <label>Time Limit
                         <select>
-                            <option>3 Mins</option>
-                            <option>5 Mins</option>
+                            <option value=3>3 Mins</option>
+                            <option value=5>5 Mins</option>
                         </select>
                     </label>
                     <label>Username
