TBC disable, Feature Spec

--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -70,7 +70,7 @@
                     <option value="13">Traditional</option>
                     <option value="14">Unlimited</option>
                     <option value="15">Mega-Banned</option>
-                    <option value="16">TBC</option>
+                    <option value="16" disabled>TBC</option>
                     <option value="17">N/A</option>
 
                 </select>
