--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -21,7 +21,7 @@
         <!--<div onclick="win.maximize();"></div>-->
         <div onclick="win.minimize();"></div>
     </div>
-    <main style='height: 100%;'>
+    <main style='height: 100%; padding-top: .5%;'>
         <div style="text-align: center;">
 
             <div id="salvationdevelopment" height="92%"></div>
