installer update, FAQ

--- a/server/http/faq.html
+++ b/server/http/faq.html
@@ -37,6 +37,8 @@
         <div style="color:white; width:600px; margin:0 auto;">
         <p>Q: How Can I install the web installer<br />
         A: copy the contence of the file to a workable location like %appdata% when started it will create a ygopro folder. Then copy your DevPro or YGOPro scripts pics and decks to the folder.</p>
+             <p>Q: I can not save a deck how can I correct this?<br />
+                 A: Create a deck folder in the /ygopro/ folder of the installation.</p>
             </div>
     </header>
     
