--- a/server/http/index.html
+++ b/server/http/index.html
@@ -42,11 +42,11 @@
             <ul class="webonly" style="text-align:center; padding:0;" id="mirrors">
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                <li><a href="http://d-h.st/5PC6">Full Windows Client </a></li>
+                <li><a href="http://d-h.st/iVP">Full Windows Client </a></li><!--
                 <li><a href="http://salvationdevelopment.com/setup.msi"> Mirror 1</a></li>
                 <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
-                <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>
+                <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
                 
             </ul>
 
