--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -16,13 +16,23 @@
     <script>
         var gui = require('nw.gui');
         var win = gui.Window.get();
+        var maxxed = false;
+        function maxrestore(){
+            if (maxxed){
+                win.restore();
+            }else{
+                win.maximize();
+            }
+            maxxed = !maxxed;
+            return;
+        }
     </script>
     <div id="control">
         <div onclick="gui.App.quit();"></div>
-        <!--<div onclick="win.maximize();"></div>-->
+        <div onclick="maxrestore();"></div>
         <div onclick="win.minimize();"></div>
     </div>
-    <main style='height: 100%;'>
+    <main style='height: 100%; background:rgba(0,0,0,.97);'>
         <div style="text-align: center;">
 
             <div id="salvationdevelopment" height="92%"></div>
